@@ -41,7 +41,7 @@ void
 camellia128_invert_key(struct camellia128_ctx *dst,
 		       const struct camellia128_ctx *src)
 {
-  _camellia_invert_key (_CAMELLIA128_NKEYS, dst->keys, src->keys);
+  _nettle_camellia_invert_key (_CAMELLIA128_NKEYS, dst->keys, src->keys);
 }
 
 void
